# bot-parser

./: .gitignore  Makefile  README.md  note.txt  pyproject.toml
bot_parser/handlers/: keybords.py  main_handler.py
bot_parser/scripts/: bot_script.py
bot_parser/src/: data_work.py  url_builder.py
