[tool.poetry]
name = "bot-parser"
version = "0.1.0"
description = ""
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
packages = [
  { include = "bot_parser" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
aiogram = "^2.23.1"
bs4 = "^0.0.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
loguru = "^0.6.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
